# code_search_tool

./: Cargo.toml  README.md  install.sh
.github/workflows/: CICD.yml
src/: ignore.rs  lib.rs  main.rs  previewer.rs  searcher.rs
