[package]
name = "code_search"
version = "0.3.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "1.10", features = ["full"] }
term_size = "0.3"

[dependencies.clap]
version = "4.0.12"
features = ["suggestions", "color", "wrap_help", "cargo", "unstable-grouped", "derive"]
