[package]
name = "fcs"
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "1.10", features = ["full"] }
term_size = "0.3"
termcolor = "1.4"
walkdir = "2"
bat = "0.24"
grep = "0.3"
skim = "0.10"

[dependencies.clap]
version = "4.5"
features = ["suggestions", "color", "wrap_help", "cargo", "derive"]
